tests/snapshots/examples_fixtures/hint_demos__math_module__main.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/hint_demos/math_module/main.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E001]: DUPLICATE NAME

Duplicate binding: `sum` is already defined.

  --> examples/hint_demos/math_module/main.flx:12:1
   |
12 | let sum = Math.add(x, y);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  --> examples/hint_demos/math_module/main.flx:0:1
  |
== stdout ==
<not executed>
